tests/snapshots/examples_fixtures/type_system__failing__166_self_recursive_guard_stable_unresolved.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/166_self_recursive_guard_stable_unresolved.flx
== compile ==
failed (compile)
== diagnostics ==
error[E430]: Any Type Inferred

Could not determine a concrete type for `loop_unknown` at the public function signature. Inferred type: `(Int) -> _`.

  examples/type_system/failing/166_self_recursive_guard_stable_unresolved.flx:36:1
   |
36 | fn loop_unknown(n) {
   | ^^^^^^^^^^^^^^^^^^

Hint:
  Add a type annotation: e.g. `fn loop_unknown(x: Int, y: Int): Int`


error[E004]: Undefined Variable

I can't find a value named `mystery_value`.

  examples/type_system/failing/166_self_recursive_guard_stable_unresolved.flx:38:9
   |
38 |         mystery_value
   |         ^^^^^^^^^^^^^

Hint:
  Define it first: let mystery_value = ...;

Found 2 errors.
== stdout ==
<not executed>
